# GammaRayEngineRust

./: Cargo.toml  LICENSE  README.md  index.html
src/: camera.rs  camera_controller.rs  designer.rs  gammaray_camera.rs  gammaray_camera_controller.rs  gammaray_open_app.rs  gui.rs  hdr.rs  hdr.wgsl  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  open_editor.rs  renderer.rs  resources.rs  shader.wgsl  texture.rs  utils.rs
src/test/: framework.rs  test.rs
src/utils/: take_fps.rs  utils.rs
