[package]
name = "GammaRayEngineRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tao = "0.26.0"
env_logger = "0.11.2"
log = "0.4.20"
wgpu = "0.19.1"
egui = "0.26.2"
eframe = "0.26.2"
pollster = "0.3.0"
bytemuck = { version = "1.14.3", features = ["derive"]}
cgmath = "0.18.0"
anyhow = "1.0.80"
fs_extra = "1.3.0"
glob = "0.3.1"
tobj = { version = "4.0.1", features = ["async",]}
cfg-if = "1.0.0"
reqwest = "0.11.24"
web-sys = "0.3.69"

[build-dependencies]
anyhow = "1.0.80"
fs_extra = "1.3.0"
glob = "0.3.1"

[dependencies.image]
version = "0.24.9"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

